# shibboleth-sp2

./: Makefile.am  Makefile.in  Portfile  Portfile.in  Shibboleth.sln  acinclude.m4  aclocal.m4  config.h.in  config_win32.h  configure  configure.ac  depend  doxygen.am  doxygen.cfg  doxygen.m4  pkginfo  pkginfo.in  postinstall  shibboleth.spec  shibboleth.spec.in
adfs/: Makefile.am  Makefile.in  adfs-lite.vcproj  adfs.cpp  adfs.rc  adfs.vcproj  resource.h
apache/: Makefile.am  Makefile.in  mod_apache.cpp  mod_shib13.vcproj  mod_shib20.vcproj  mod_shib22.vcproj  mod_shib_13.cpp  mod_shib_13.rc  mod_shib_20.cpp  mod_shib_20.rc  mod_shib_22.cpp  mod_shib_22.rc  resource.h
configs/: Makefile.am  Makefile.in  accessError.html  apache.config.in  apache2.config.in  apache22.config.in  attribute-map.xml  attribute-policy.xml  globalLogout.html  keygen.bat  keygen.sh  localLogout.html  metadataError.html  metagen.sh  native.logger.in  partialLogout.html  sessionError.html  shibboleth2.xml  shibd-debian.in  shibd-osx.plist.in  shibd-redhat.in  shibd-suse.in  shibd.logger.in  sslError.html  xsltproc.js
debian/: changelog  control  copyright  libapache2-mod-shib2.NEWS  libapache2-mod-shib2.README.Debian  libapache2-mod-shib2.dirs  libapache2-mod-shib2.docs  rules  (+16 more)
doc/: CREDITS.txt  Makefile.am  Makefile.in  NOTICE.txt  README.txt  RELEASE.txt  main.css
fastcgi/: Makefile.am  Makefile.in  resource.h  shibauthorizer.cpp  shibauthorizer.rc  shibauthorizer.vcproj  shibresponder.cpp  shibresponder.rc  shibresponder.vcproj
memcache-store/: Makefile.am  Makefile.in  memcache-store.cpp  memcache-store.rc  memcache-store.vcproj  resource.h
nsapi_shib/: Makefile.am  Makefile.in  nsapi_shib.cpp  nsapi_shib.rc  nsapi_shib.vcproj  resource.h
odbc-store/: Makefile.am  Makefile.in  odbc-store.cpp  odbc-store.rc  odbc-store.vcproj  resource.h
schemas/: Makefile.am  Makefile.in  WS-Trust.xsd  catalog.xml.in  shibboleth-2.0-afp-mf-basic.xsd  shibboleth-2.0-afp-mf-saml.xsd  shibboleth-2.0-afp.xsd  shibboleth-2.0-attribute-map.xsd  shibboleth-2.0-native-sp-config.xsd
selinux/: Makefile.am  Makefile.in  shibshar.fc.in  shibshar.te
shibsp/: AbstractSPRequest.cpp  AbstractSPRequest.h  AccessControl.h  Application.cpp  Application.h  Makefile.am  Makefile.in  RequestMapper.h  SPConfig.cpp  SPConfig.h  SPRequest.h  ServiceProvider.cpp  ServiceProvider.h  SessionCache.h  SessionCacheEx.h  TransactionLog.h  base.h  exceptions.h  internal.h  paths.h  paths.h.in  resource.h  shibsp-lite.vcproj  shibsp.rc  shibsp.vcproj  version.h
shibsp/attribute/: Attribute.cpp  Attribute.h  AttributeDecoder.h  DOMAttributeDecoder.cpp  ExtensibleAttribute.cpp  ExtensibleAttribute.h  KeyInfoAttributeDecoder.cpp  NameIDAttribute.cpp  NameIDAttribute.h  NameIDAttributeDecoder.cpp  NameIDFromScopedAttributeDecoder.cpp  ScopedAttribute.cpp  ScopedAttribute.h  ScopedAttributeDecoder.cpp  SimpleAttribute.cpp  SimpleAttribute.h  StringAttributeDecoder.cpp  XMLAttribute.cpp  XMLAttribute.h  XMLAttributeDecoder.cpp
shibsp/attribute/filtering/: AttributeFilter.h  BasicFilteringContext.h  FilterPolicyContext.h  FilteringContext.h  MatchFunctor.h
shibsp/attribute/filtering/impl/: AndMatchFunctor.cpp  AnyMatchFunctor.cpp  AttributeFilter.cpp  AttributeIssuerInEntityGroupFunctor.cpp  AttributeIssuerRegexFunctor.cpp  AttributeIssuerStringFunctor.cpp  AttributeRequesterInEntityGroupFunctor.cpp  AttributeRequesterRegexFunctor.cpp  AttributeRequesterStringFunctor.cpp  AttributeScopeMatchesShibMDScopeFunctor.cpp  AttributeScopeRegexFunctor.cpp  AttributeScopeStringFunctor.cpp  AttributeValueRegexFunctor.cpp  AttributeValueStringFunctor.cpp  AuthenticationMethodRegexFunctor.cpp  AuthenticationMethodStringFunctor.cpp  BasicFilteringContext.cpp  ChainingAttributeFilter.cpp  MatchFunctor.cpp  NotMatchFunctor.cpp  NumberOfAttributeValuesFunctor.cpp  OrMatchFunctor.cpp  XMLAttributeFilter.cpp
shibsp/attribute/resolver/: AttributeExtractor.h  AttributeResolver.h  ResolutionContext.h
shibsp/attribute/resolver/impl/: ChainingAttributeExtractor.cpp  ChainingAttributeResolver.cpp  DelegationAttributeExtractor.cpp  KeyDescriptorAttributeExtractor.cpp  QueryAttributeResolver.cpp  SimpleAggregationAttributeResolver.cpp  XMLAttributeExtractor.cpp
shibsp/binding/: ArtifactResolver.h  SOAPClient.h
shibsp/binding/impl/: ArtifactResolver.cpp  SOAPClient.cpp
shibsp/handler/: AbstractHandler.h  AssertionConsumerService.h  Handler.h  LogoutHandler.h  RemotedHandler.h  SessionInitiator.h
shibsp/handler/impl/: AbstractHandler.cpp  AssertionConsumerService.cpp  AssertionLookup.cpp  ChainingLogoutInitiator.cpp  ChainingSessionInitiator.cpp  CookieSessionInitiator.cpp  FormSessionInitiator.cpp  LocalLogoutInitiator.cpp  LogoutHandler.cpp  MetadataGenerator.cpp  RemotedHandler.cpp  SAML1Consumer.cpp  SAML2ArtifactResolution.cpp  SAML2Consumer.cpp  SAML2Logout.cpp  SAML2LogoutInitiator.cpp  SAML2NameIDMgmt.cpp  SAML2SessionInitiator.cpp  SAMLDSSessionInitiator.cpp  SessionHandler.cpp  SessionInitiator.cpp  Shib1SessionInitiator.cpp  StatusHandler.cpp  TransformSessionInitiator.cpp  WAYFSessionInitiator.cpp
shibsp/impl/: ChainingAccessControl.cpp  StorageServiceSessionCache.cpp  XMLAccessControl.cpp  XMLRequestMapper.cpp  XMLServiceProvider.cpp
shibsp/lite/: CommonDomainCookie.cpp  CommonDomainCookie.h  SAMLConstants.cpp  SAMLConstants.h
shibsp/metadata/: DynamicMetadataProvider.cpp  MetadataExt.h  MetadataExtImpl.cpp  MetadataExtSchemaValidators.cpp  MetadataProviderCriteria.cpp  MetadataProviderCriteria.h
shibsp/remoting/: ListenerService.h  ddf.h
shibsp/remoting/impl/: ListenerService.cpp  SocketListener.cpp  SocketListener.h  TCPListener.cpp  UnixListener.cpp  ddf.cpp
shibsp/security/: PKIXTrustEngine.cpp  PKIXTrustEngine.h  SecurityPolicy.cpp  SecurityPolicy.h
shibsp/util/: CGIParser.cpp  CGIParser.h  DOMPropertySet.cpp  DOMPropertySet.h  PropertySet.h  SPConstants.cpp  SPConstants.h  TemplateParameters.cpp  TemplateParameters.h
util/: Makefile.am  Makefile.in  mdquery.cpp  mdquery.vcproj  resolvertest.cpp  resolvertest.vcproj
(+23 files in other folders)
